--- a/spring-security-oauth2-dependencies/pom.xml
+++ b/spring-security-oauth2-dependencies/pom.xml
@@ -11,6 +11,8 @@
 
     <properties>
         <spring-cloud.version>Greenwich.SR2</spring-cloud.version>
+        <hikaricp.version>3.3.1</hikaricp.version>
+        <mysql.version>8.0.17</mysql.version>
     </properties>
 
     <dependencyManagement>
@@ -21,6 +23,27 @@
                 <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.zaxxer</groupId>
+                <artifactId>HikariCP</artifactId>
+                <version>${hikaricp.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-jdbc</artifactId>
+                <exclusions>
+                    <!-- 排除 tomcat-jdbc 以使用 HikariCP -->
+                    <exclusion>
+                        <groupId>org.apache.tomcat</groupId>
+                        <artifactId>tomcat-jdbc</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
